nginx configuration update

--- a/labweb/.config/uwsgi/mysite.ini
+++ b/labweb/.config/uwsgi/mysite.ini
@@ -6,7 +6,9 @@ home = /home/ubuntu/myweb/
 uid = ubuntu
 gid = ubuntu
 
-http = :8080
+socket = /tmp/labweb.sock
+chmod-socket = 666
+chown-socket = ubuntu:ubuntu
 
 enable-threads = true
 master = true
