--- a/labweb/.config/nginx/mysite.conf
+++ b/labweb/.config/nginx/mysite.conf
@@ -6,7 +6,7 @@ server {
 
 	location / {
 		uwsgi_pass unix:///tmp/labweb.sock;
-		include uwsgi_paramas;
+		include /etc/nginx/uwsgi_params;
 	}
 }
 
