feat: settings.py와 nginx.conf에 도메인 이름을 추가하고, 해당 도메인에 대한 HTTP 및 HTTPS 요청을 처리하고, HTTP 요청을 HTTPS로 리디렉션하도록 설정

--- a/labweb/nginx.conf
+++ b/labweb/nginx.conf
@@ -2,11 +2,33 @@ events {}
 
 http {
     upstream web {
-        server web:8000;
+        server web:8000;  # Docker 컨테이너에서 실행 중인 웹 애플리케이션 서버
     }
 
+    # HTTP 서버 블록
     server {
         listen 80;
+        server_name ines-lab.com www.ines-lab.com;
+        charset utf-8;
+        client_max_body_size 128M;
+
+        # HTTP 요청을 HTTPS로 리디렉션
+        if ($http_x_forwarded_proto = 'http') {
+            return 301 https://$host$request_uri;
+        }
+
+        location / {
+            return 301 https://$host$request_uri;
+        }
+    }
+
+    # HTTPS 서버 블록
+    server {
+        listen 443 ssl;
+        server_name ines-lab.com www.ines-lab.com;
+
+        ssl_certificate /etc/letsencrypt/live/ines-lab.com/fullchain.pem;
+        ssl_certificate_key /etc/letsencrypt/live/ines-lab.com/privkey.pem;
 
         location / {
             proxy_pass http://web;
