--- a/labweb/nginx.conf
+++ b/labweb/nginx.conf
@@ -2,27 +2,28 @@ events {}
 
 http {
     upstream web {
-        server web:8000;  # Docker 컨테이너에서 실행 중인 웹 애플리케이션 서버
+        server web:8000;
     }
 
-    # HTTP 서버 블록
     server {
-        listen 80;
+        listen 8080;
         server_name ines-lab.com www.ines-lab.com;
         charset utf-8;
         client_max_body_size 128M;
 
-        # HTTP 요청을 HTTPS로 리디렉션
         if ($http_x_forwarded_proto = 'http') {
             return 301 https://$host$request_uri;
         }
 
         location / {
-            return 301 https://$host$request_uri;
+            proxy_pass http://web;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
         }
     }
 
-    # HTTPS 서버 블록
     server {
         listen 443 ssl;
         server_name ines-lab.com www.ines-lab.com;
