--- a/labweb/docker-compose.yml
+++ b/labweb/docker-compose.yml
@@ -4,7 +4,7 @@ services:
   web:
     build: .
     ports:
-      - "8000:8000"
+      - "8001:8000"  # 변경된 포트
     volumes:
       - .:/app
     environment:
@@ -13,7 +13,7 @@ services:
   nginx:
     image: nginx:latest
     ports:
-      - "8000:80"
+      - "80:80"
     volumes:
       - ./nginx.conf:/etc/nginx/nginx.conf
     depends_on:
