Fix: 로드밸런서 상태 확인이 Unhealthy로 표시되는 문제를 해결하기 위해 상태확인엔드포인트 추가

--- a/labweb/nginx.conf
+++ b/labweb/nginx.conf
@@ -11,6 +11,7 @@ http {
         charset utf-8;
         client_max_body_size 128M;
 
+        # 프록시 모든 요청을 내부 애플리케이션 서버로
         location / {
             proxy_pass http://web;
             proxy_set_header Host $host;
@@ -19,6 +20,16 @@ http {
             proxy_set_header X-Forwarded-Proto $scheme;
         }
 
+        # 상태 확인 경로를 내부 애플리케이션 서버로 프록시
+        location /health {
+            proxy_pass http://web/health;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+        }
+
+        # HTTP 요청을 HTTPS로 리디렉션
         if ($http_x_forwarded_proto = 'http') {
             return 301 https://$host$request_uri;
         }
